Frontend/public/views/index.css
body{
	width: 100%;
	height: 100%;
	background-color: black;
  margin: 0;
}

input[type="text"]::placeholder {
  text-align: left;
}

#main-container{
  position: absolute;
  left: 0;
  top: 0;
	width: 100%;
	height: 100%;
	padding: 0;
  z-index: 0;
}


#comparison1{
  position: absolute;
  left: 0;
  top: 0;
  width: 50%;
  height: 100%;
  padding: 0;
  z-index: 1;
}

#comparison2{
  position: absolute;
  right: 0;
  top: 0;
  width: 50%;
  height: 100%;
  padding: 0;
  z-index: 1;
}

#menu{
	top: 0;
  width: 200px;
	position: relative;
	background-color: transparent;
  z-index: 2;
  transition: margin-left .5s; /* If you want a transition effect */
  height: 100%;
}

/* Button used to open the contact form - fixed at the bottom of the page */
.compare-button {
  background-color: #555;
  color: white;
  padding-top: 10px;
  padding-bottom: 10px;
  border: none;
  cursor: pointer;
  opacity: 0.8;
  position: fixed;
  left: 110px;
  width: 100px;
}

/* Button used to open the contact form - fixed at the bottom of the page */
.create-button {
  background-color: #555;
  color: white;
  padding-top: 10px;
  padding-bottom: 10px;
  border: none;
  cursor: pointer;
  opacity: 0.8;
  position: fixed;
  width: 100px;
}

/* The popup form - hidden by default */
.form-popup {
  font-family: Helvetica, Arial, sans-serif;
  display: none;
  position: absolute;
  top: 0;
  left: 0;
  margin-right: -50%;
  border: 3px solid #f1f1f1;
  z-index: 9;
}

/* Add styles to the form container */
.form-container {
  max-width: 300px;
  padding: 10px;
  background-color: white;
}

/* Full-width input fields */
.form-container input[type=text], .form-container input[type=password] {
  width: 90%;
  padding: 15px;
  border: none;
  background: #f1f1f1;
}

/* When the inputs get focus, do something */
.form-container input[type=text]:focus, .form-container input[type=password]:focus {
  background-color: #ddd;
  outline: none;
}

/* Set a style for the submit/login button */
.form-container .btn {
  background-color: gray;
  color: white;
  padding: 16px 20px;
  border: none;
  cursor: pointer;
  width: 100%;
  margin-bottom:10px;
  opacity: 0.8;
}


/* Add some hover effects to buttons */
.form-container .btn:hover, .open-button:hover {
  opacity: 1;
} 


.column {
  flex: 50%;
}

#newSimForm {
  font-family: Helvetica, Arial, sans-serif;
  color: white;
}

.multiselect {
  width: 100%;
}

#myForm {
  display:none;
  position: fixed;
  background: white;
  width: inherit;
  max-height: fit-content;
  z-index: 2;
}

.selectBox {
  position: relative;
}

.selectBox select {
  width: 100%;
}

.overSelect {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
}

#checkboxes {
  display: none;
  background-color: grey;
  opacity: .9;
}

#checkboxes label {
  display: block;
  background-color: white;
}

#checkboxes label:hover {
  background-color: #1e90ff;
}

input.readonly {
   opacity : .50;
   filter  : alpha(opacity=50); /* IE<9 */
   cursor  : default;
}
.readonlylabel{color:#aaaaaa;}

.sim-time {
  position: absolute;
  top: 0px;
  left: 39%;
  font-family: Helvetica, Arial, sans-serif;
  color: white;
  text-align: center;
  z-index: 2;
}

/* The Bodies menu */
.sidebar {
  height: 45%; /* 100% Full-height */
  width: 0; /* 0 width - change this with JavaScript */
  position: fixed; /* Stay in place */
  z-index: 1; /* Stay on top */
  top: 2%;
  left: 0;
  background-color: lightgrey; /* Black*/
  overflow-x: hidden; /* Disable horizontal scroll */
  transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
  border-radius: 10px;
  z-index: 0;
}

/*The Settings Menu*/
.Rsidebar {
  height:43%; /* 100% Full-height */
  width: 0; /* 0 width - change this with JavaScript */
  position: fixed; /* Stay in place */
  z-index: 1; /* Stay on top */
  top: 50%;
  left: 0;
  background-color: lightgrey; /* Black*/
  overflow-x: hidden; /* Disable horizontal scroll */
  transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
  border-radius: 10px;
  float: left;
  text-align: left;
}

/* The sidebar links for The Bodies menu*/
.sidebar a {
  text-decoration: none;
  color: black;
  display: block;
  transition: 0.3s;
}

/*The Sidebar links for the Settings menu*/
.Rsidebar a {
  padding: 8px 8px 8px 32px;
  text-decoration: none;
  font-size: 25px;
  color: black;
  display: block;
  transition: 0.3s;
}

/* When you mouse over the navigation links, change their color */
.sidebar a:hover {
  color: #f1f1f1;
}

.Rsidebar a:hover {
  color: #f1f1f1;
}

/*Change the color of the checkbox/label combos in the Bodies sidebar when hovering over it*/
.sidebar .checkbox_and_label:hover {
  background-color: #43a0ff;
}

/* Position and style the close button (top right corner) */
.sidebar .closebtn {
  position: relative;
  top: -0.3em;
  font-size: 2.3em;
  float: right;
}

.info_panel #info_close {
  position: absolute;
  font-size: 2.3em;
  float: left;
  cursor: pointer;
  top: 0;
  background: none;
  border: none;
  width: 30px;
  height: 30px;
  margin: 1px;
  padding: 0px;
  line-height: 10px;
}

/*Container for the Title and close button of the Bodies menu*/
#topOfSidebar{
  position: relative;
  margin-block-start: 0.5em;
  margin-block-end: 0.5em;
  margin-left: 10px;
  margin-right: 10px;
}

/*The title for the Bodies menu*/
#mySidebar1 h3 {
  position: relative;
  margin-block-start: 0;
  margin-block-end: 0;
  max-width: fit-content;
}

/*The upload kernel button*/
#kernel {
  margin-left:10%;
  margin-right: 10%;
  margin-top:4%;
  display: block;
  border-radius: 5px;
  background-color: darkgrey;
}

/*Container for the list of bodies*/
.content1 {
  background-color: white;
  border-radius: 5px;
  margin-left: 10px;
  margin-right: 10px;
  margin-top: 0px;
  font-family: Helvetica, Arial, sans-serif;
}

/*The check-boxes in the bodies list*/
.content1 input{
  margin: 6px;
}

/* The Create Sim Sidebar */
.Rsidebar .closebtn {
  position: absolute;
  top: -0.3em;
  font-size: 2.3em;
  margin-left: 110px;
}

/* Time Slider in Create Sim Sidebar */
.slidecontainer {
  width: 90%;
  margin:0 auto;
}

/*The sliders for tail length and rate of time*/
.slider {
  -webkit-appearance: none;
  width: 100%;
  height: 15px;
  border-radius: 5px;
  background: darkgrey;
  outline: none;
  opacity: 0.7;
  -webkit-transition: .2s;
  transition: opacity .2s;
}

/*Change the opacity of the slider when you hover over the slider*/
.slider:hover {
  opacity: 1;
}

/*The slider dot appearance (mars icon)*/
.slider::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  width: 25px;
  height: 25px;
  border-radius: 50%;
  background-image: url("mars.png");
  background-size: 150%;
  background-position: 50% 50%;
  cursor: pointer;
}

/*More Slider apearance rules*/
.slider::-moz-range-thumb {
  width: 25px;
  height: 25px;
  border-radius: 50%;
  background-image: url("mars.png");
  background-size: 150%;
  background-position: 50% 50%;
  cursor: pointer;
}

/*The containers for the forms in the Settings menu*/
.form-inline {
  display: flex;
  flex-flow: row wrap;
  align-items: center;
}

/*The text input fields in the Settings menu*/
.form-inline input {
  vertical-align: middle;
  margin: 8px 30px 8px 10px;
  padding: 3px;
  background-color: #fff;
  border: 1px solid #ddd;
  border-radius: 5px;
  width:45%;
  outline: none;
}

/*The set and realtime buttons under the Settings menu*/
.form-inline button {
  width: 25%;
  padding: 3px;
  background-color: darkgrey;
  border: 1px solid #ddd;
  border-radius: 5px;
  color: black;
  outline:none;
  position:relative;
}

/*The realtime button under the Settings Menu*/
#real_time {
  width: 40%;
  padding: 2px;
  background-color: darkgrey;
  border: 1px solid #ddd;
  border-radius: 5px;
  color: black;
  margin: 5px 30% 3px auto;
  outline: none;
  position: relative;
}

/*The hover behavior for the set buttons under the Settings menu*/
.form-inline button:hover {
  background-color: white;
  cursor: pointer;
}

/*The hover behavior for the realtime button under the Settings menu*/
#real_time:hover {
  background-color: white;
}

/*The Start button under the Settings menu*/
.playbtn {
    background-image: url("earth-icon.png");
    background-size: 150%;
    background-position: 50% 50%;
    position: relative;
    top: 60%;
    left: 20%;
    width: 65px;
    height: 65px;
    border-radius: 100%;
    border: 1px solid gray;
    outline:none;
    font-size:20px;
    color:white;
    opacity: 0.7;
    transition: opacity .2s;
}

/*The hover behavior of the Start button under the Settings menu*/
.playbtn:hover{
  cursor:pointer;
  opacity: 1;
}

/*The reset and compare buttons under the Settings menu*/
.action_btn{
  display: inline-block;
  width:48%;
  padding:10px;
  border-radius: 12px;
  outline: none;
  background: darkgrey;
  color:black;
  margin-top:10px;
}

/*The hover behavior of the reset and compare buttons under the Settings menu*/
.action_btn:hover{
  background-color: white;
  cursor: pointer;
}

/* The button used to open the sidebars */
button {
  display: block;
}

/*The button to open the Bodies menu*/
.openbtn {
  font-size: 20px;
  cursor: pointer;
  background-color: lightgrey;
  color: black;
  padding: 10px 10px;
  margin-bottom: 10px;
  border: none;
  border-radius: 10px;
  outline: none;
  float:left;
  display: block;
  position: absolute;
  top: 2%;
  left: 0;
  width: 100%;
}

/*The button to open the Time Controls menu*/
.Ropenbtn {
  font-size: 20px;
  cursor: pointer;
  background-color: lightgrey;
  color: black;
  padding: 10px 10px;
  margin-bottom: 10px;
  border: none;
  border-radius: 10px;
  outline: none;
  float:  left;
  top: 50%;
  left: 0;
  position: relative;
  width: 100%;
}

/*The hover behavior of the Bodies menu button*/
.openbtn:hover {
  background-color: #444;
}

/*The hover behavior of the Settings menu button*/
.Ropenbtn:hover {
  background-color: #444;
}

/*Clearfix*/
.clear {
  clear: both;
}

/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
@media screen and (max-height: 450px) {
  .sidebar {padding-top: 15px;}
  .sidebar a {font-size: 18px;}
}

/*The labels for the bodies under the Bodies menu*/
.content1 label {
  max-width: fit-content;
  padding-inline-end: calc(100% - 39px);
  position: absolute;
  padding-top: 0.23em;
  padding-bottom: 0.23em;
}

/*The container holding the checkbox/label combos*/
.checkbox_and_label {
  border-radius: inherit;
}

/*The custom context menu that appears when you right click an element in the Bodies menu*/
.context-menu {
  position: fixed;
  left: 0;
  background-color: #f1f1f1;
  border-radius: 5px;
  display: none;
  z-index: 1;
  border: 1px black solid;
}

/*The options in the custom context menu*/
.context-menu-option {
  border-radius: inherit;
  max-height: fit-content;
}

/*The hover behavior for each context menu option*/
.context-menu-option:hover {
  background-color: #43a0ff;
}

/*The labels for the checkboxes in the contex menu*/
.context-menu-option label {
  padding-top: 0.23em;
  padding-bottom: 0.23em;
  position: relative;
  display: block;
}

/*The container for th sublist for bodies that have it under the Bodies menu*/
.nested_list {
  padding-left: 20px;
  border-radius: inherit;
}

/*The container holding the checkbox/label combos and all sublists for bodies in the Bodies menu*/
.body-box {
  border-radius: inherit;
}

#error-console {
  position: absolute;
  bottom: 10px;
  right: 10px;
  width: 160px;
  height: 110px;
  /* overflow: scroll; */
  opacity: 0.7;
  overflow-x: hidden;
  overflow-y: auto;
  right: 10px;
  z-index: 2;
}

.info_panel {
  width: 227px;
  height: 300px;
  position: fixed;
  background-color: lightgray;
  top: calc(50% - 100px);
  right: 0;
  border-radius: 10px;
  text-align: center;
  /* cursor: pointer; */
}

